# mcp-paradex-py

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.aws  LICENSE  Makefile  README.md  claude_desktop_config.json  main.py  mcp-testing-framework.yaml  package.json  pyproject.toml  server.json  smithery.json  smithery.yaml  tsconfig.json  wrangler.jsonc
.github/workflows/: build-test.yml  publish.yml
prompts/: build.prompt  docs.prompt  kickstart.prompt  trader_prompts.yaml
src/: index.ts
src/mcp_paradex/: __init__.py  __main__.py  models.py
src/mcp_paradex/prompts/: __init__.py  trader_prompts.py
src/mcp_paradex/resources/: __init__.py  market.py  system.py  vaults.py
src/mcp_paradex/server/: asgi.py  exceptions.py  server.py  worker.py
src/mcp_paradex/tools/: __init__.py  account.py  market.py  orders.py  system.py  vaults.py
src/mcp_paradex/utils/: config.py  formatter.py  jmespath_utils.py  paradex_client.py
src/models/: account.ts  market.test.ts  market.ts
src/resources/: market.ts  system.test.ts  system.ts
src/server/: server.ts
src/tools/: account.ts  market.test.ts  market.ts
src/utils/: config.ts  paradex-client.ts
tests/: __init__.py  conftest.py  test_cli.py  test_sample.py  test_tools.py
