[project]
name = "mcp-paradex"
version = "0.1.0"
description = "MCP server for Paradex trading platform integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "paradex-py>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "argparse>=1.4.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
mcp-paradex = "mcp_paradex.server.server:run_cli"

[project.entry-points."mcp.server"]
paradex = "mcp_paradex.server.server:server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
